# StudentManagmentSystem

./: CMakeLists.txt  README.md  WebServer.cpp  globals.cpp  header.hpp  main.cpp  studenti.json
controllers/: UserController.cpp  UserController.h
views/: index.html
